syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";
package ms2gw;
option cc_generic_services = true;

message StartGSRequest
{
  string ip = 1;
  uint32 port = 2;
  uint32 gs_node_id = 3;
}

message StopGSRequest
{
  string ip = 1;
  uint32 port = 2;
}

message PlayerEnterGSRequest
{
  uint64 conn_id = 1;
  uint32 gs_node_id = 2;
  uint64 player_id = 3;
}

message MessageExtern
{
  uint64 conn_id = 1;
  uint32 gs_node_id = 2;
  uint64 player_id = 3;
}

message PlayerMessageRequest
{
  MessageBody msg = 1;
  MessageExtern ex = 2;
}

service Ms2gwService {
  rpc StartGS (StartGSRequest) returns (google.protobuf.Empty);
  rpc StopGS (StopGSRequest) returns (google.protobuf.Empty);
  rpc PlayerEnterGS (PlayerEnterGSRequest) returns (google.protobuf.Empty);
  rpc PlayerMessage (PlayerMessageRequest) returns (google.protobuf.Empty);
}